--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -11,7 +11,7 @@
         <div class="nav-padding">
             <span class="nav-ham" id="nav-ham">&#9776;</span>
             <img src = "{% static 'Icon/icon.png' %}" alt = "Data Drift" class="navbar-icon form-icon" title = "Forms">
-            <span class="nav-text" title = "Forms"><a href = "{% url 'index' %}" class="nav-link">Forms CLONE</a></span>
+            <span class="nav-text" title = "Forms"><a href = "{% url 'index' %}" class="nav-link">Data Drift</a></span>
             <a href="{% url 'logout' %}">
                 <img src = "{% static 'Icon/Logout.jpg' %}" alt = "Logout Icon" class="navbar-icon float-right logout-icon" title = "Logout">
             </a>
@@ -25,10 +25,13 @@
                     <span>Data Drift</span>
                 </a>
             </h4>
-            <p class="text-label">Found bug? Submit an issue <a href="#" class="link">here</a></p>
+            <p class="text-label">Found bug? Create an issue <a href="https://github.com/chiraag-kakar/datadrift/issues" class="link">here</a></p>
+            <br/>
             <p class="text-label">License: <a href="#" class="link">MIT</a></p>
-            <p class="text-label">Source code: <a href="#">
+            <br/>
+            <p class="text-label">Source code: <a href="https://github.com/chiraag-kakar/datadrift">
                 <img src = "{% static 'Icon/github.png' %}" class="github-icon" alt="GitHub"></a></p>
+            <br/>
             <p class="text-label">😃 Hit that <a href="#" class="link">⭐ button</a>to show some ❤️</p>
         </div>
     </div>
